...
final class PaymentInputViewController: UIViewController {

    // MARK: - Properties
    private var overlayButton = UIButton()
    private var labelsStackView = UIStackView()
    private var currencyLabel = UILabel()
    private var amountLabel = UILabel()
    private var enterAmountLabel = UILabel()
    private var keypadView = KeypadView()
    private var checkoutButton = UIButton()
    private var menuButton = UIButton()
    private var amountString = "0" {
        didSet {
            amountLabel.text = amountString
        }
    }
    var numberFormatter: NumberFormatter {
...
