...
  // MARK: - Properties
  private let topOverlayView = GradientView(colors: [
    .white, .white, UIColor.white.withAlphaComponent(0),
  ])
  private var navigationBar = NavigationBar()
  private var scrollView = UIScrollView()
  private var itemsView = ItemsView()
  private var walletAdView = UIView()
  private var walletLabel = UILabel()
  private var localBitcoinCashAdView = UIView()
  private var localBitcoinCashLabel = UILabel()
    
    // MARK: - Layout Properties
    private var itemsViewHeightConstraint: NSLayoutConstraint?
    private var constraints : [NSLayoutConstraint] = [];

...
    UIScreen.main.bounds.size.width - 2 * AppConstants.GENERAL_MARGIN
}

private struct Localized {
  static var settings: String { NSLocalizedString("menu_settings", comment: "") }
  static var cancel: String { NSLocalizedString("button_cancel", comment: "") }
  static var OK: String { NSLocalizedString("prompt_ok", comment: "") }
  static var addDestinationAddress: String {
    NSLocalizedString("options_add_payment_address", comment: "")
  }
  static var destinationAddressExplanation: String {
    NSLocalizedString("options_explain_payment_address", comment: "")
  }
...
