...
import RealmSwift
import BitcoinKit

final class PaymentRequestViewController: UIViewController {

    // MARK: - Properties
    private var cancelButton = UIButton()
    private var shareButton = UIButton()
    private var connectionStatusImageView = UIImageView()
    private var qrContainerView = CardView()
    private var qrImageView = UIImageView()
    private var timeRemainingLabel = UILabel()
    private var scanToPayLabel = UILabel()
    private var amountLabel = UILabel()
    private var paymentCompletedView = PaymentCompletedView()
    private var timer: Timer?
    var numberFormatter: NumberFormatter {
...
